--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<div>My current favourite song is
+		<a href = "https://www.youtube.com/watch?v=4NRXx6U8ABQ">Blinding Lights</a>
+	</div>
 </body>
 
 </html>
